// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state for enterprise, can create 1`] = `
.c4 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  max-width: 600px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
  text-align: center;
}

.c10 {
  box-sizing: border-box;
  text-align: center;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 224px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  border-radius: 4px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border: 1px solid;
  box-sizing: border-box;
  background-color: transparent;
  cursor: pointer;
  font-family: inherit;
  font-weight: bold;
  outline: none;
  opacity: 0.56;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  border-color: rgba(255,255,255,0.87);
  color: #FFFFFF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 24px;
  width: 224px;
  border-color: rgba(255,255,255,0.87);
  color: rgba(255,255,255,0.87);
}

.c12:hover {
  opacity: 1;
}

.c12:active {
  opacity: 0.24;
}

.c12 > span {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c12:hover,
.c12:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12:hover,
.c12:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c7 {
  display: block;
  outline: none;
  margin-bottom: 24px;
  margin-left: auto;
  margin-right: auto;
  height: 160px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  font-size: 24px;
  margin: 0px;
  margin-bottom: 8px;
  font-weight: 700;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 14px;
  margin: 0px;
  font-weight: 400;
}

.c3 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
    </div>
    <div
      class="c3 sc-AxirZ c4"
      width="100%"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <img
            class="c7"
            height="160px"
            src="file_stub"
          />
          <div
            class="c8"
            font-size="24"
            font-weight="700"
          >
            Add your first application to Teleport
          </div>
          <div
            class="c9"
            font-size="14"
            font-weight="400"
            style="opacity: 0.6;"
          >
            Teleport Application Access provides secure access to internal applications.
          </div>
        </div>
        <div
          class="c10"
        >
          <a
            href="/web/discover"
            style="text-decoration: none;"
          >
            <button
              class="c11"
              kind="primary"
              width="224px"
            >
              Add 
              application
            </button>
          </a>
          <a
            class="c12"
            href="https://goteleport.com/docs/application-access/getting-started/"
            rel="noreferrer"
            target="_blank"
            width="224px"
          >
            <span>
              View Documentation
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed state 1`] = `
.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c3 a {
  color: #FFFFFF;
}

.c7 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c27 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 88px;
}

.c27:active {
  opacity: 0.56;
}

.c27:hover,
.c27:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c27:active {
  opacity: 0.24;
}

.c27:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c30 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 22px;
}

.c31 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: rgba(255,255,255,0.72);
  font-size: 14px;
}

.c36 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 16px;
  margin: 0px;
}

.c5 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c19 {
  box-sizing: border-box;
  display: flex;
}

.c23 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #0097a7;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c25 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c28 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #00796b;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c29 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #f57c00;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c32 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #1976d2;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c34 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c21 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c21 > thead > tr > th,
.c21 > tbody > tr > th,
.c21 > tfoot > tr > th,
.c21 > thead > tr > td,
.c21 > tbody > tr > td,
.c21 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c21 > thead > tr > th:first-child,
.c21 > tbody > tr > th:first-child,
.c21 > tfoot > tr > th:first-child,
.c21 > thead > tr > td:first-child,
.c21 > tbody > tr > td:first-child,
.c21 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c21 > thead > tr > th:last-child,
.c21 > tbody > tr > th:last-child,
.c21 > tfoot > tr > th:last-child,
.c21 > thead > tr > td:last-child,
.c21 > tbody > tr > td:last-child,
.c21 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c21 > tbody > tr > td {
  vertical-align: middle;
}

.c21 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c21 > thead > tr > th .c17 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c21 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c21 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c21 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c4 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c33 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c26 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-right: 4px;
  cursor: pointer;
}

.c35 {
  background: none;
  border: none;
  cursor: pointer;
}

.c35 .c17 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c35:hover .c17,
.c35:focus .c17 {
  opacity: 1;
}

.c35:disabled {
  cursor: default;
}

.c35:disabled .c17 {
  opacity: 0.1;
}

.c10 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c8 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c9 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-right: 184px;
}

.c9:hover,
.c9:focus,
.c9:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c9::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c12 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c12[disabled] {
  cursor: default;
}

.c15 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c15:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #651FFF;
}

.c13 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c13:checked + .c14 {
  background: #512FC9;
}

.c13:checked + .c14:before {
  transform: translate(16px,-50%);
}

.c13:disabled + .c14 {
  background: #222C59;
}

.c13:disabled + .c14:before {
  background: #455a64;
}

.c11 {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding-right: 16px;
  padding-left: 16px;
  width: 120px;
}

.c22 > tbody > tr > td {
  vertical-align: middle;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
    </div>
    <div
      class="c3"
      kind="danger"
    >
      <div>
        some error message
      </div>
    </div>
    <form
      class="c4"
    >
      <div
        class="c5"
        width="100%"
      >
        <div
          class="c6"
          style="width: 70%;"
        >
          <div
            class="c7"
            width="100%"
          >
            <div
              class="c8"
            >
              <input
                class="c9"
                placeholder="SEARCH..."
                value=""
              />
              <div
                class="c10"
              >
                <div
                  class="c11"
                >
                  <label
                    class="c12"
                  >
                    <input
                      class="c13"
                      type="checkbox"
                    />
                    <div
                      class="c14 c15"
                    />
                  </label>
                  <div
                    class="c16"
                  >
                    Advanced
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="line-height: 0px;"
          >
            <span
              class="c17 c18 icon icon-info_outline "
              color="light"
              style="cursor: pointer; font-size: 20px;"
            />
          </div>
        </div>
        <div
          class="c19"
        >
          <div
            class="c20"
            color="text.contrast"
            style="text-transform: uppercase;"
          >
            Showing 
            <strong>
              1
            </strong>
             - 
            <strong>
              5
            </strong>
             of
             
            <strong>
              5
            </strong>
          </div>
        </div>
      </div>
    </form>
    <table
      class="c21 c22"
    >
      <thead>
        <tr>
          <th
            style="cursor: default;"
          />
          <th>
            <a>
              Name
              <span
                class="c17 c18 icon icon-chevron-up "
                color="light"
                title="sort items asc"
              />
            </a>
          </th>
          <th>
            <a>
              Description
              <span
                class="c17 c18 icon icon-chevrons-expand-vertical "
                color="light"
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c23"
              height="32px"
              width="32px"
            >
              <div
                class="c24"
                font-size="3"
              >
                J
              </div>
            </div>
          </td>
          <td>
            Jenkins
          </td>
          <td>
            This is a Jenkins app
          </td>
          <td>
            https://jenkins.teleport-proxy.com
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                env: prod
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                cluster: one
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <a
              class="c27"
              href="/web/launch/jenkins.one/one/jenkins.teleport-proxy.com"
              kind="border"
              rel="noreferrer"
              target="_blank"
              width="88px"
            >
              LAUNCH
            </a>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c28"
              height="32px"
              width="32px"
            >
              <div
                class="c24"
                font-size="3"
              >
                M
              </div>
            </div>
          </td>
          <td>
            Mattermost1
          </td>
          <td>
            This is a Mattermost app
          </td>
          <td>
            https://mattermost.teleport-proxy.com
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                env: dev
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                cluster: two
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <a
              class="c27"
              href="/web/launch/mattermost.one/one/mattermost.teleport-proxy.com"
              kind="border"
              rel="noreferrer"
              target="_blank"
              width="88px"
            >
              LAUNCH
            </a>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c28"
              height="32px"
              width="32px"
            >
              <div
                class="c24"
                font-size="3"
              >
                T
              </div>
            </div>
          </td>
          <td>
            TCP
          </td>
          <td>
            This is a TCP app
          </td>
          <td>
            tcp://some-address
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                env: dev
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                cluster: one
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c27"
              disabled=""
              kind="border"
              title="Cloud or TCP applications cannot be launched by the browser"
              width="88px"
            >
              LAUNCH
            </button>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c29"
              height="32px"
              width="32px"
            >
              <span
                class="c17 c30 icon icon-amazonaws "
                color="light"
                font-size="6"
              />
            </div>
          </td>
          <td>
            aws-console-1
          </td>
          <td>
            This is an AWS Console app
          </td>
          <td>
            https://awsconsole-1.teleport-proxy.com
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                aws_account_id: A1234
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                env: dev
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                cluster: two
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c27"
              kind="border"
              width="88px"
            >
              LAUNCH
              <span
                class="c17 c31 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c32"
              height="32px"
              width="32px"
            >
              <div
                class="c24"
                font-size="3"
              >
                C
              </div>
            </div>
          </td>
          <td>
            Cloud
          </td>
          <td>
            This is a Cloud specific app
          </td>
          <td>
            cloud://some-address
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                env: dev
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                cluster: one
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c27"
              disabled=""
              kind="border"
              title="Cloud or TCP applications cannot be launched by the browser"
              width="88px"
            >
              LAUNCH
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      class="c33"
    >
      <div
        class="c34"
        width="100%"
      >
        <div
          class="c19"
        >
          <button
            class="c35"
            title="Previous page"
          >
            <span
              class="c17 c36 icon icon-arrow-left-circle "
              color="light"
              font-size="3"
            />
          </button>
          <button
            class="c35"
            title="Next page"
          >
            <span
              class="c17 c36 icon icon-arrow-right-circle "
              color="light"
              font-size="3"
            />
          </button>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`loaded state 1`] = `
.c7 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c27 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 88px;
}

.c27:active {
  opacity: 0.56;
}

.c27:hover,
.c27:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c27:active {
  opacity: 0.24;
}

.c27:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c30 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 22px;
}

.c31 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: rgba(255,255,255,0.72);
  font-size: 14px;
}

.c36 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 16px;
  margin: 0px;
}

.c5 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c19 {
  box-sizing: border-box;
  display: flex;
}

.c23 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #0097a7;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c25 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c28 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #00796b;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c29 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #f57c00;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c32 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #1976d2;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c34 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c21 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c21 > thead > tr > th,
.c21 > tbody > tr > th,
.c21 > tfoot > tr > th,
.c21 > thead > tr > td,
.c21 > tbody > tr > td,
.c21 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c21 > thead > tr > th:first-child,
.c21 > tbody > tr > th:first-child,
.c21 > tfoot > tr > th:first-child,
.c21 > thead > tr > td:first-child,
.c21 > tbody > tr > td:first-child,
.c21 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c21 > thead > tr > th:last-child,
.c21 > tbody > tr > th:last-child,
.c21 > tfoot > tr > th:last-child,
.c21 > thead > tr > td:last-child,
.c21 > tbody > tr > td:last-child,
.c21 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c21 > tbody > tr > td {
  vertical-align: middle;
}

.c21 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c21 > thead > tr > th .c17 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c21 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c21 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c21 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c4 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c33 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c26 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-right: 4px;
  cursor: pointer;
}

.c35 {
  background: none;
  border: none;
  cursor: pointer;
}

.c35 .c17 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c35:hover .c17,
.c35:focus .c17 {
  opacity: 1;
}

.c35:disabled {
  cursor: default;
}

.c35:disabled .c17 {
  opacity: 0.1;
}

.c10 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c8 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c9 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-right: 184px;
}

.c9:hover,
.c9:focus,
.c9:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c9::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c12 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c12[disabled] {
  cursor: default;
}

.c15 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c15:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #651FFF;
}

.c13 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c13:checked + .c14 {
  background: #512FC9;
}

.c13:checked + .c14:before {
  transform: translate(16px,-50%);
}

.c13:disabled + .c14 {
  background: #222C59;
}

.c13:disabled + .c14:before {
  background: #455a64;
}

.c11 {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding-right: 16px;
  padding-left: 16px;
  width: 120px;
}

.c22 > tbody > tr > td {
  vertical-align: middle;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
      <a
        href="/web/discover"
        style="text-decoration: none;"
      >
        <button
          class="c3"
          kind="primary"
          title=""
          width="240px"
        >
          Add 
          application
        </button>
      </a>
    </div>
    <form
      class="c4"
    >
      <div
        class="c5"
        width="100%"
      >
        <div
          class="c6"
          style="width: 70%;"
        >
          <div
            class="c7"
            width="100%"
          >
            <div
              class="c8"
            >
              <input
                class="c9"
                placeholder="SEARCH..."
                value=""
              />
              <div
                class="c10"
              >
                <div
                  class="c11"
                >
                  <label
                    class="c12"
                  >
                    <input
                      class="c13"
                      type="checkbox"
                    />
                    <div
                      class="c14 c15"
                    />
                  </label>
                  <div
                    class="c16"
                  >
                    Advanced
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="line-height: 0px;"
          >
            <span
              class="c17 c18 icon icon-info_outline "
              color="light"
              style="cursor: pointer; font-size: 20px;"
            />
          </div>
        </div>
        <div
          class="c19"
        >
          <div
            class="c20"
            color="text.contrast"
            style="text-transform: uppercase;"
          >
            Showing 
            <strong>
              1
            </strong>
             - 
            <strong>
              5
            </strong>
             of
             
            <strong>
              5
            </strong>
          </div>
        </div>
      </div>
    </form>
    <table
      class="c21 c22"
    >
      <thead>
        <tr>
          <th
            style="cursor: default;"
          />
          <th>
            <a>
              Name
              <span
                class="c17 c18 icon icon-chevron-up "
                color="light"
                title="sort items asc"
              />
            </a>
          </th>
          <th>
            <a>
              Description
              <span
                class="c17 c18 icon icon-chevrons-expand-vertical "
                color="light"
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c23"
              height="32px"
              width="32px"
            >
              <div
                class="c24"
                font-size="3"
              >
                J
              </div>
            </div>
          </td>
          <td>
            Jenkins
          </td>
          <td>
            This is a Jenkins app
          </td>
          <td>
            https://jenkins.teleport-proxy.com
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                env: prod
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                cluster: one
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <a
              class="c27"
              href="/web/launch/jenkins.one/one/jenkins.teleport-proxy.com"
              kind="border"
              rel="noreferrer"
              target="_blank"
              width="88px"
            >
              LAUNCH
            </a>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c28"
              height="32px"
              width="32px"
            >
              <div
                class="c24"
                font-size="3"
              >
                M
              </div>
            </div>
          </td>
          <td>
            Mattermost1
          </td>
          <td>
            This is a Mattermost app
          </td>
          <td>
            https://mattermost.teleport-proxy.com
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                env: dev
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                cluster: two
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <a
              class="c27"
              href="/web/launch/mattermost.one/one/mattermost.teleport-proxy.com"
              kind="border"
              rel="noreferrer"
              target="_blank"
              width="88px"
            >
              LAUNCH
            </a>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c28"
              height="32px"
              width="32px"
            >
              <div
                class="c24"
                font-size="3"
              >
                T
              </div>
            </div>
          </td>
          <td>
            TCP
          </td>
          <td>
            This is a TCP app
          </td>
          <td>
            tcp://some-address
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                env: dev
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                cluster: one
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c27"
              disabled=""
              kind="border"
              title="Cloud or TCP applications cannot be launched by the browser"
              width="88px"
            >
              LAUNCH
            </button>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c29"
              height="32px"
              width="32px"
            >
              <span
                class="c17 c30 icon icon-amazonaws "
                color="light"
                font-size="6"
              />
            </div>
          </td>
          <td>
            aws-console-1
          </td>
          <td>
            This is an AWS Console app
          </td>
          <td>
            https://awsconsole-1.teleport-proxy.com
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                aws_account_id: A1234
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                env: dev
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                cluster: two
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c27"
              kind="border"
              width="88px"
            >
              LAUNCH
              <span
                class="c17 c31 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c32"
              height="32px"
              width="32px"
            >
              <div
                class="c24"
                font-size="3"
              >
                C
              </div>
            </div>
          </td>
          <td>
            Cloud
          </td>
          <td>
            This is a Cloud specific app
          </td>
          <td>
            cloud://some-address
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                env: dev
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                cluster: one
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c27"
              disabled=""
              kind="border"
              title="Cloud or TCP applications cannot be launched by the browser"
              width="88px"
            >
              LAUNCH
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      class="c33"
    >
      <div
        class="c34"
        width="100%"
      >
        <div
          class="c19"
        >
          <button
            class="c35"
            title="Previous page"
          >
            <span
              class="c17 c36 icon icon-arrow-left-circle "
              color="light"
              font-size="3"
            />
          </button>
          <button
            class="c35"
            title="Next page"
          >
            <span
              class="c17 c36 icon icon-arrow-right-circle "
              color="light"
              font-size="3"
            />
          </button>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`readonly empty state 1`] = `
.c3 {
  box-sizing: border-box;
  max-width: 664px;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  color: rgba(255,255,255,0.87);
  text-align: center;
  border-radius: 12px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
    </div>
    <div
      class="c3"
      color="text.main"
    >
      <div
        class="c4"
      >
        No Applications Found
      </div>
      <div
        class="c5"
      >
        Either there are no 
        applications
         in the "
        <span
          class="c6"
        >
          im-a-cluster
        </span>
        " cluster, or your roles don't grant you access.
      </div>
    </div>
  </div>
</div>
`;
